--- a/package.json
+++ b/package.json
@@ -8,12 +8,6 @@
     "start": "next start",
     "lint": "next lint"
   },
-  "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.3.5",
-    "next-intl": "^2.7.0" 
-  },
   "devDependencies": {
     "typescript": "^5",
     "@types/node": "^20",
@@ -22,4 +16,11 @@
     "@tailwindcss/postcss": "^4",
     "tailwindcss": "^4"
   }
+  "dependencies": {
+  "next": "14.1.4",
+  "next-intl": "2.22.1",
+  "react": "18.2.0",
+  "react-dom": "18.2.0"
+}
+
 }
