--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "tailwindcss": "^4"
   },
   "dependencies": {
-  "next": "14.1.4",
-  "next-intl": "2.22.1",
-  "react": "18.2.0",
-  "react-dom": "18.2.0"
-}
-
+    "next": "14.1.4",
+    "next-intl": "2.22.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "clsx": "^2.1.0"
+  }
 }
