--- a/package.json
+++ b/package.json
@@ -1,26 +1,29 @@
 {
-  "name": "nextjs",
+  "name": "cattinder-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
-  },
   "dependencies": {
-    "next": "14.1.4",
-    "next-intl": "2.22.1",
+    "next": "14.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "clsx": "^2.1.0"
+    "next-intl": "2.22.1",
+    "clsx": "^2.1.1"
+  },
+  "devDependencies": {
+    "typescript": "^5.4.5",
+    "@types/node": "^20.11.30",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.7",
+    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.35",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.2.3"
   }
 }
