--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+// package.json
 {
   "name": "cattinder-app",
   "version": "0.1.0",
@@ -12,18 +13,15 @@
     "next": "14.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "next-intl": "2.22.1",
-    "clsx": "^2.1.1"
+    "next-intl": "2.22.1"
   },
   "devDependencies": {
-    "typescript": "^5.4.5",
-    "@types/node": "^20.11.30",
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.7",
     "tailwindcss": "^3.4.1",
-    "autoprefixer": "^10.4.17",
-    "postcss": "^8.4.35",
-    "eslint": "8.57.0",
-    "eslint-config-next": "14.2.3"
+    "postcss": "^8.4.38",
+    "autoprefixer": "^10.4.19",
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18"
   }
 }
