--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
   },
   "dependencies": {
     "next": "14.2.3",
+    "next-intl": "2.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "next-intl": "2.22.1"
+    "clsx": "^2.1.1"
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.1",
-    "postcss": "^8.4.38",
     "autoprefixer": "^10.4.19",
-    "typescript": "^5",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.4.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18"
